# erwhi_remars_2019

./: CMakeLists.txt  README.md  package.xml
launch/: led.launch  remars_gazebo.launch  remote.launch  restart.launch  robot_demo.launch
models/3d/: remars01.dae  remars02.dae
rviz/: monitor.rviz
scripts/: startup.sh
src/: cloudwatch_log.cpp  demo_teleop.cpp  explore_blinker.cpp  gazebo_reset.cpp  led_detection.cpp
worlds/: remars2019_01.world
